fix navbar on mobile
yada yada

--- a/style.css
+++ b/style.css
@@ -607,7 +607,7 @@ footer .column > a:hover{
     align-items: center;
     justify-content: space-between;
     gap: 2rem;
-	width: 40%;
+	width: 70%;
 }
 
 	nav a i {
@@ -667,7 +667,6 @@ footer .column > a:hover{
 	}
 	
 	nav a i {
-		margin-left:-2.5rem;
     font-size: 52px; /* Adjust the size as needed */
 	color: white;
 }
